# h-shot

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  resource.rc
cmake/: Findglad.cmake  Findskia.cmake
src/: capture_state.cpp  capture_state.h  guard.h  main.cpp  pre.cpp  pre.h
src/ui/: state.h  view.cpp  view.h
src/window/: window.cpp  window.h
